feat: model evaluation result

--- a/Fake_News_detection.ipynb
+++ b/Fake_News_detection.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1b1RikSw2aIISShPkMvK82I9Utk9oo3YK",
-      "authorship_tag": "ABX9TyObE65+kLMh1s7y+vrta2Hu",
+      "authorship_tag": "ABX9TyNSyLBqahP46vRwA/p60gX0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -707,10 +707,86 @@
         "print(\"Training Complete! The model has finished learning from the 16,000 articles.\")"
       ],
       "metadata": {
-        "id": "1fAFtrVVhPuj"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1fAFtrVVhPuj",
+        "outputId": "98d7fec2-b3e5-4293-9f0a-eced97e97e67"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training Complete! The model has finished learning from the 16,000 articles.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Testing and Evaluation"
+      ],
+      "metadata": {
+        "id": "M1EeuUK_iSxM"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.metrics import accuracy_score, confusion_matrix, classification_report\n",
+        "\n",
+        "# 1. Predict (The \"Exam\" Step)\n",
+        "# We ask the model to guess the labels for the unseen test data\n",
+        "y_pred = pac_model.predict(X_test_tfidf)\n",
+        "\n",
+        "# 2. Calculate Accuracy\n",
+        "score = accuracy_score(y_test, y_pred)\n",
+        "print(f'Accuracy: {round(score*100, 2)}%')\n",
+        "\n",
+        "# 3. Create the Confusion Matrix\n",
+        "# This shows: [ [True Positives, False Negatives], [False Positives, True Negatives] ]\n",
+        "print(\"\\nConfusion Matrix:\")\n",
+        "print(confusion_matrix(y_test, y_pred))\n",
+        "\n",
+        "# 4. Detailed Report\n",
+        "print(\"\\nClassification Report:\")\n",
+        "print(classification_report(y_test, y_pred))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LhOl48sliLfk",
+        "outputId": "4fc6c81b-1e38-4ad4-cb03-34ac44aaeb1c"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Accuracy: 50.68%\n",
+            "\n",
+            "Confusion Matrix:\n",
+            "[[ 993  996]\n",
+            " [ 977 1034]]\n",
+            "\n",
+            "Classification Report:\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.50      0.50      0.50      1989\n",
+            "           1       0.51      0.51      0.51      2011\n",
+            "\n",
+            "    accuracy                           0.51      4000\n",
+            "   macro avg       0.51      0.51      0.51      4000\n",
+            "weighted avg       0.51      0.51      0.51      4000\n",
+            "\n"
+          ]
+        }
+      ]
     }
   ]
 }
