feat : save the model

--- a/Fake_News_detection.ipynb
+++ b/Fake_News_detection.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1b1RikSw2aIISShPkMvK82I9Utk9oo3YK",
-      "authorship_tag": "ABX9TyNSyLBqahP46vRwA/p60gX0",
+      "authorship_tag": "ABX9TyOVqCzC4lv5noWa9ZIqAWhO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -720,6 +720,50 @@
           "name": "stdout",
           "text": [
             "Training Complete! The model has finished learning from the 16,000 articles.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Save the model"
+      ],
+      "metadata": {
+        "id": "16MdibrxjFqc"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pickle\n",
+        "\n",
+        "# 1. Save the trained Passive Aggressive Model\n",
+        "# 'wb' stands for \"Write Binary\"\n",
+        "with open('fake_news_model.pkl', 'wb') as model_file:\n",
+        "    pickle.dump(pac_model, model_file)\n",
+        "\n",
+        "# 2. Save the TF-IDF Vectorizer\n",
+        "# This is crucial! Without this, you cannot transform new text for prediction.\n",
+        "with open('tfidf_vectorizer.pkl', 'wb') as vectorizer_file:\n",
+        "    pickle.dump(tfidf_vectorizer, vectorizer_file)\n",
+        "\n",
+        "print(\"Success! Both the model and vectorizer have been saved as .pkl files.\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dQwH1ZO1jCLO",
+        "outputId": "ecdb9081-3f73-467d-9b71-b30b61059593"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Success! Both the model and vectorizer have been saved as .pkl files.\n"
           ]
         }
       ]
