feat : check label count (for fine tune)

--- a/Fake_News_detection.ipynb
+++ b/Fake_News_detection.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1b1RikSw2aIISShPkMvK82I9Utk9oo3YK",
-      "authorship_tag": "ABX9TyOVqCzC4lv5noWa9ZIqAWhO",
+      "authorship_tag": "ABX9TyPSvU9cKTjxQLpN7j6rqhXw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -764,6 +764,33 @@
           "name": "stdout",
           "text": [
             "Success! Both the model and vectorizer have been saved as .pkl files.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Check if labels are actually 0 and 1\n",
+        "print(df['label'].value_counts())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jCMw9OTQnTzY",
+        "outputId": "4645910b-e4fd-4249-a30d-db20252a4f7a"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "label\n",
+            "1    10056\n",
+            "0     9944\n",
+            "Name: count, dtype: int64\n"
           ]
         }
       ]
